--- a/sample-github/src/main/res/layout/activity_main.xml
+++ b/sample-github/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.androidhuman.example.samplegithub.ui.main.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvActivityMainList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,7 +23,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/githubBlack" />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnActivityMainSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,4 +31,5 @@
         android:layout_margin="24dp"
         android:src="@drawable/ic_search_white"
         app:fabSize="normal" />
+
 </FrameLayout>
