--- a/sample-github/src/main/res/menu/menu_activity_search.xml
+++ b/sample-github/src/main/res/menu/menu_activity_search.xml
@@ -8,7 +8,7 @@
         android:id="@+id/menu_activity_search_query"
         android:icon="@drawable/ic_search_white"
         android:title="@string/search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="always|collapseActionView" />
 
     <item
